--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -13,11 +13,11 @@ tomcat http port - 8080 default
 tomcat shutdown - 8005 default
 tomcat ssl - 8443 default
 keystore file - included
-databse - mysql
+databse - mysql 
 mysql driver - default
 database username - fedoraAdmin 
 database password - fedoraAdmin
-jdbc url - default
+jdbc url - jdbc:mysql://localhost/fedora?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true 
 jdbc class- default
 Enable FESL authn - true
 Enable FESL authz - false
