added drupal filter and jaas file config

--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -17,7 +17,7 @@ databse - mysql
 mysql driver - default
 database username - fedoraAdmin 
 database password - fedoraAdmin
-jdbc url - jdbc:mysql://localhost/fedora?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true 
+jdbc url - jdbc:mysql://localhost/fedora3?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true 
 jdbc class- default
 Enable FESL authn - true
 Enable FESL authz - false
