--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -1,29 +1,33 @@
-Installation type - custom
-home directory - /usr/local/fedora
-Password - fedoraAdmin
-server host - localhost
-app server context - default
-API-A - default false
-ssl avail - true
-ssl required for api-a - default false
-ssl required for api-m - false
-servlet included - default included
-tomcat home - default
-tomcat http port - 8080 default
-tomcat shutdown - 8005 default
-tomcat ssl - 8443 default
-keystore file - included
-databse - mysql 
-mysql driver - default
-database username - fedoraAdmin 
-database password - fedoraAdmin
-jdbc url - jdbc:mysql://localhost/fedora3?useUnicode=true&amp;characterEncoding=UTF-8&amp;autoReconnect=true 
-jdbc class- default
-Enable FESL authn - true
-Enable FESL authz - false
-policy enforcement - true
-low level storage - default akubra-fs
-resource index - true
-messaging - true
-messaging provider - default
-deploy local services - true
+#Install Options
+#Wed Sep 24 16:17:00 UTC 2014
+keystore.file=included
+ri.enabled=false
+messaging.enabled=false
+apia.auth.required=false
+database.jdbcDriverClass=com.mysql.jdbc.Driver
+upstream.auth.enabled=false
+tomcat.ssl.port=8443
+ssl.available=true
+database.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&amp;characterEncoding\=UTF-8&amp;autoReconnect\=true
+database.password=fedoraAdmin
+database.mysql.driver=included
+database.username=fedoraAdmin
+fesl.authz.enabled=false
+tomcat.shutdown.port=8005
+deploy.local.services=true
+xacml.enabled=true
+database.mysql.jdbcDriverClass=com.mysql.jdbc.Driver
+tomcat.http.port=8080
+fedora.serverHost=localhost
+database=mysql
+database.driver=included
+fedora.serverContext=fedora
+llstore.type=akubra-fs
+tomcat.home=/usr/local/fedora/tomcat
+database.mysql.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&amp;characterEncoding\=UTF-8&amp;autoReconnect\=true
+fedora.home=/usr/local/fedora
+install.type=custom
+servlet.engine=included
+apim.ssl.required=true
+fedora.admin.pass=fedoraAdmin
+apia.ssl.required=false
