--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -1,7 +1,7 @@
 #Install Options
 #Wed Sep 24 16:17:00 UTC 2014
 keystore.file=included
-ri.enabled=false
+ri.enabled=true
 messaging.enabled=false
 apia.auth.required=false
 database.jdbcDriverClass=com.mysql.jdbc.Driver
@@ -15,7 +15,7 @@ database.username=fedoraAdmin
 fesl.authz.enabled=false
 tomcat.shutdown.port=8005
 deploy.local.services=true
-xacml.enabled=true
+xacml.enabled=false
 database.mysql.jdbcDriverClass=com.mysql.jdbc.Driver
 tomcat.http.port=8080
 fedora.serverHost=localhost
