--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -15,7 +15,7 @@ database.username=fedoraAdmin
 fesl.authz.enabled=false
 tomcat.shutdown.port=8005
 deploy.local.services=true
-xacml.enabled=false
+xacml.enabled=true
 database.mysql.jdbcDriverClass=com.mysql.jdbc.Driver
 tomcat.http.port=8080
 fedora.serverHost=localhost
