--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -28,6 +28,6 @@ database.mysql.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&amp;cha
 fedora.home=/usr/local/fedora
 install.type=custom
 servlet.engine=included
-apim.ssl.required=true
+apim.ssl.required=false
 fedora.admin.pass=fedoraAdmin
 apia.ssl.required=false
