--- a/fedora-370/fgsconfig-basic-for-islandora.properties
+++ b/fedora-370/fgsconfig-basic-for-islandora.properties
@@ -14,7 +14,7 @@
 configDisplayName=configProductionSolr
 
 # gsearchBase is used for SOAP deployment.
-gsearchBase=http://fedora.domain.org:8080
+gsearchBase=http://localhost:8080/fedoragsearch
 
 # gsearchAppName is used for SOAP deployment.
 gsearchAppName=fedoragsearch
@@ -50,7 +50,7 @@ namesOfIndexes=FgsIndex
 
   # fedoraBase is base url of the repository.
 #>>>>>>>>>>
-  fedoraBase=http://fedora.domain.org:8080
+  fedoraBase=http://localhost:8080/fedora
 #<<<<<<<<<<
 
   # fedoraAppName is Fedora app name of this repository.
@@ -78,7 +78,7 @@ namesOfIndexes=FgsIndex
   indexEngine=Solr
 
   # FgsIndex: indexBase is the server base url, in case of Solr or Zebra.
-  indexBase=http://fedora.domain.org:8080/solr
+  indexBase=http://localhost:8080/solr
 
   # FgsIndex: indexDir is the path to the index.
   # indexDir=${local.FEDORA_HOME}/gsearch/FgsIndex/index
