--- a/fedora-370/install.properties
+++ b/fedora-370/install.properties
@@ -2,7 +2,7 @@
 #Wed Sep 24 16:17:00 UTC 2014
 keystore.file=included
 ri.enabled=true
-messaging.enabled=true
+messaging.enabled=false
 apia.auth.required=false
 database.jdbcDriverClass=com.mysql.jdbc.Driver
 upstream.auth.enabled=false
