fixed gsearch conf

--- a/fedora-370/fgsconfig-basic-for-islandora.properties
+++ b/fedora-370/fgsconfig-basic-for-islandora.properties
@@ -14,7 +14,7 @@
 configDisplayName=configProductionSolr
 
 # gsearchBase is used for SOAP deployment.
-gsearchBase=http://localhost:8080/fedoragsearch
+gsearchBase=http://localhost:8080
 
 # gsearchAppName is used for SOAP deployment.
 gsearchAppName=fedoragsearch
@@ -50,7 +50,7 @@ namesOfIndexes=FgsIndex
 
   # fedoraBase is base url of the repository.
 #>>>>>>>>>>
-  fedoraBase=http://localhost:8080/fedora
+  fedoraBase=http://localhost:8080
 #<<<<<<<<<<
 
   # fedoraAppName is Fedora app name of this repository.
